feat(strategy): 策略模式,成员变量和单例模式的选择